--- a/app/src/main/res/layout/pointer_view.xml
+++ b/app/src/main/res/layout/pointer_view.xml
@@ -4,8 +4,8 @@
     android:layout_height="50dp">
 
     <View
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:background="@mipmap/ic_launcher"
-        android:layout_centerInParent="true"/>
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_centerInParent="true"
+        android:background="@drawable/cursor" />
 </RelativeLayout>
