横移動サポート

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -140,6 +140,34 @@
                 android:text="設定" />
 
             <TextView
+                android:id="@+id/scrollleftKeyCodeLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="左ににスクロール"
+                android:textSize="16sp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="8dp" />
+            <Button
+                android:id="@+id/scrollleftKeyCodeButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="設定" />
+
+            <TextView
+                android:id="@+id/scrollrightKeyCodeLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="右にスクロール"
+                android:textSize="16sp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="8dp" />
+            <Button
+                android:id="@+id/scrollrightKeyCodeButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="設定" />
+
+            <TextView
                 android:id="@+id/enableKeyCodeLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
